[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=1]
[ext_resource path="res://res/ui/bts2/pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://res/ui/bts2/normal.tres" type="StyleBox" id=3]
[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=4]
[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://res/ui/bts2/hover.tres" type="StyleBox" id=6]
[ext_resource path="res://pages/sheets/sheet_elt_list_mode2.gd" type="Script" id=7]
[ext_resource path="res://res/ui/icons_alpha/trash_icon.png" type="Texture" id=8]
[ext_resource path="res://res/ui/icons_alpha/pencil2_icon.png" type="Texture" id=9]
[ext_resource path="res://res/ui/icons_alpha/validation_icon.png" type="Texture" id=10]
[ext_resource path="res://res/ui/icons_alpha/export_icon.png" type="Texture" id=11]

[node name="Sheet_Elt_List_Mode2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Titre" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 37.0

[node name="Bt_back" type="Button" parent="VBoxContainer/Titre"]
margin_right = 84.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 1 )
text = "retour"

[node name="Label" type="Label" parent="VBoxContainer/Titre"]
margin_left = 88.0
margin_top = 3.0
margin_right = 167.0
margin_bottom = 34.0
text = "Fiche :"

[node name="Title" type="Label" parent="VBoxContainer/Titre"]
margin_left = 171.0
margin_top = 3.0
margin_right = 432.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Titre"

[node name="TitleEdit" type="LineEdit" parent="VBoxContainer/Titre"]
visible = false
margin_left = 120.0
margin_right = 452.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Bt_validate_titre" type="Button" parent="VBoxContainer/Titre"]
visible = false
modulate = Color( 0.305882, 0.929412, 0.196078, 1 )
margin_left = 392.0
margin_right = 432.0
margin_bottom = 37.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Titre/Bt_validate_titre"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Bt_edit_titre" type="Button" parent="VBoxContainer/Titre"]
modulate = Color( 0.92549, 0.929412, 0.196078, 1 )
margin_left = 436.0
margin_right = 476.0
margin_bottom = 37.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Titre/Bt_edit_titre"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Bt_delete_sheet" type="Button" parent="VBoxContainer/Titre"]
modulate = Color( 1, 0.0627451, 0.0627451, 1 )
margin_left = 480.0
margin_right = 520.0
margin_bottom = 37.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/Titre/Bt_delete_sheet"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 520.0
margin_bottom = 45.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 520.0
margin_bottom = 86.0
alignment = 2

[node name="Bt_Export" type="Button" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 0.980392, 0.788235, 0.0313726, 1 )
margin_left = 383.0
margin_right = 423.0
margin_bottom = 37.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer2/Bt_Export"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Bt_toggle_mode_to_mode1" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 427.0
margin_right = 520.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 1 )
text = "mode 1"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 520.0
margin_bottom = 94.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 520.0
margin_bottom = 135.0

[node name="Bt_add_element" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 236.0
margin_bottom = 37.0
rect_min_size = Vector2( 200, 36 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 1 )
text = "ajouter un Ã©lement"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 139.0
margin_right = 520.0
margin_bottom = 143.0

[node name="Cols" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 520.0
margin_bottom = 187.0
custom_constants/separation = 10

[node name="Col1" type="HBoxContainer" parent="VBoxContainer/Cols"]
margin_right = 248.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="col1" type="Label" parent="VBoxContainer/Cols/Col1"]
margin_top = 4.0
margin_right = 204.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Col1"
align = 1
valign = 1

[node name="edt_col1" type="LineEdit" parent="VBoxContainer/Cols/Col1"]
visible = false
margin_left = 104.0
margin_right = 204.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Bt_edit_col1" type="Button" parent="VBoxContainer/Cols/Col1"]
modulate = Color( 0.92549, 0.929412, 0.196078, 1 )
margin_left = 208.0
margin_right = 248.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Cols/Col1/Bt_edit_col1"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Bt_validate_col1" type="Button" parent="VBoxContainer/Cols/Col1"]
visible = false
modulate = Color( 0.196078, 0.929412, 0.243137, 1 )
margin_left = 208.0
margin_right = 248.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Cols/Col1/Bt_validate_col1"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Cols"]
margin_left = 258.0
margin_right = 262.0
margin_bottom = 40.0
rect_min_size = Vector2( 2, 0 )

[node name="Col2" type="HBoxContainer" parent="VBoxContainer/Cols"]
margin_left = 272.0
margin_right = 520.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="col2" type="Label" parent="VBoxContainer/Cols/Col2"]
margin_top = 4.0
margin_right = 204.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Col2"
align = 1
valign = 1

[node name="edt_col2" type="LineEdit" parent="VBoxContainer/Cols/Col2"]
visible = false
margin_left = 52.0
margin_right = 146.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="Bt_edit_col2" type="Button" parent="VBoxContainer/Cols/Col2"]
modulate = Color( 0.92549, 0.929412, 0.196078, 1 )
margin_left = 208.0
margin_right = 248.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Cols/Col2/Bt_edit_col2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Bt_validate_col2" type="Button" parent="VBoxContainer/Cols/Col2"]
visible = false
modulate = Color( 0.196078, 0.929412, 0.243137, 1 )
margin_left = 208.0
margin_right = 248.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Cols/Col2/Bt_validate_col2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 191.0
margin_right = 520.0
margin_bottom = 940.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Elements" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 520.0
margin_bottom = 749.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/Titre/Bt_back" to="." method="_on_Bt_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Titre/Bt_validate_titre" to="." method="_on_Bt_validate_titre_pressed"]
[connection signal="pressed" from="VBoxContainer/Titre/Bt_edit_titre" to="." method="_on_Bt_edit_titre_pressed"]
[connection signal="pressed" from="VBoxContainer/Titre/Bt_delete_sheet" to="." method="_on_Bt_delete_sheet_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Bt_Export" to="." method="_on_Bt_Export_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Bt_toggle_mode_to_mode1" to="." method="_on_Bt_toggle_mode_to_mode1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Bt_add_element" to="." method="_on_Bt_add_element_pressed"]
[connection signal="pressed" from="VBoxContainer/Cols/Col1/Bt_edit_col1" to="." method="_on_Bt_edit_col1_pressed"]
[connection signal="pressed" from="VBoxContainer/Cols/Col1/Bt_validate_col1" to="." method="_on_Bt_validate_col1_pressed"]
[connection signal="pressed" from="VBoxContainer/Cols/Col2/Bt_edit_col2" to="." method="_on_Bt_edit_col2_pressed"]
[connection signal="pressed" from="VBoxContainer/Cols/Col2/Bt_validate_col2" to="." method="_on_Bt_validate_col2_pressed"]
